--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>We are in develop branch</title>
+    <title>We are in develop branch (UPDATED)</title>
   </head>
   <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quibusdam.
